# bs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  fs.rs  identity.rs  lib.rs  sign.rs  verify.rs
src/did/: johnhopkins@GregsMB.attlocal.net.did  repo.did
